# ManifestIQ

./: .gitignore  AI_MODEL_DETECTION_SPEC.md  BASELINE_RULES.md  CISO_CTO_ASSURANCE_SPEC.md  CODEX_CLAUDE_PROMPT.md  DESIGN_SYSTEM.md  MASTER_SPEC.md  PROJECT_STATUS.md  README.md  RULEBOOK_GOVERNANCE.md  pyproject.toml  requirements.txt
MOCUP Image/: UI_CODEX_IMPLEMENTATION_PROMPT.md
apps/gui/: index.html  package-lock.json  package.json  vite.config.ts
docs/adr/: ADR-0001-local-deterministic-non-ai.md  ADR-0002-evidence-first-design.md  ADR-0003-baseline-rulebook-governance.md  ADR-0004-validation-gates-and-regression-control.md  (+1 more)
docs/design/: README.md  (+14 more)
profiles/: ai-enabled.yml  department-use.yml  enterprise.yml  finance-sox.yml  production-critical.yml  sandbox.yml  team-use.yml
rules/: ai_model_risk.yml  architecture.yml  configuration.yml  data_sox.yml  delivery_readiness.yml  documentation.yml  governance.yml  licenses.yml  maintainability.yml  operational.yml  scan_integrity.yml  security.yml  supply_chain.yml
scanner/: __main__.py
templates/: report.html
tests/: conftest.py  test_goldset_validation.py  test_governance_docs.py  test_governance_evidence.py  test_phase10_assurance_contract.py  test_phase11_decision_packet.py  test_phase12_risk_acceptance.py  test_phase13_release_hardening.py  test_phase14_trust_safety.py  test_phase16_gui_renderer.py  test_phase17a_gui_workbench.py  test_portfolio_validation.py  test_release_go_no_go.py  test_sample_scan_evidence.py  test_smoke.py  test_test_evidence.py  test_validation.py  test_validation_trends.py
(+263 files in other folders)
